# life

./: CMakeLists.txt  README.md  vcpkg.json
src/: grid.cpp  grid.hpp  main.cc  main.cpp  sim.cpp  sim.hpp
